--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-push": "yarn precommit-msg && yarn lint && yarn test-unit" 
+      "pre-push": "yarn precommit-msg && yarn lint && yarn test-unit"
     }
   },
   "dependencies": {
@@ -24,15 +24,17 @@
     "start": "yarn run-p start-*",
     "start-client": "lerna run start --scope @serge/client --stream",
     "start-server": "lerna run start --scope @serge/server --stream",
+    "watch": "lerna run watch --stream",
+    "rebuild" : "yarn build && yarn start",
     "dev": "yarn component-dev & yarn start",
-    "develop": "yarn component-dev & yarn storybook & yarn start",
+    "develop": "lerna run develop --scope @serge/client --stream & yarn start-server",
     "test": "lerna run test --stream",
     "test-local": "lerna run test-local --stream",
     "test-unit": "lerna run test:unit --stream",
     "lint": "lerna run lint --stream",
     "storybook": "lerna run storybook --scope @serge/components --stream",
     "build-storybook": "lerna run build-storybook --scope @serge/components --stream",
-    "build": "lerna run build --scope @serge/components --scope @serge/client --scope @serge/config --scope @serge/helpers --stream",
+    "build": "lerna run build --scope @serge/components --scope @serge/client --scope @serge/config --scope @serge/helpers --parallel",
     "pkg-build": "lerna run start --scope @serge/executable --stream",
     "component-build": "lerna run build --scope @serge/components --stream",
     "component-dev": "yarn component-build & lerna run watch --parallel --scope @serge/components",
