--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
   - name: Client Pipeline
     env: PACKAGE_LOCATION=packages/client PACKAGE_NAME=@serge/client
 before_script:
-  - export NODE_OPTIONS=–max_old_space_size=8192
+  - export NODE_OPTIONS=–max_old_space_size=10000
 script:
   # build Serge deployment
   - yarn build
