Configured testing in helpers package

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -5,6 +5,11 @@
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "main": "build/index.js",
   "dependencies": {
-    "honeycomb-grid": "^3.1.7"
+    "honeycomb-grid": "^3.1.7",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.0.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
