--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,13 +20,16 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.10.0",
+    "@babel/preset-react": "^7.10.0",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
+    "@serge/config": "0.3.0",
     "@serge/custom-types": "0.3.0",
     "@serge/helpers": "0.3.0",
     "@serge/mocks": "0.3.0",
+    "@serge/store": "0.3.0",
     "@serge/themes": "0.3.0",
-    "@serge/config": "0.3.0",
     "@storybook/addon-backgrounds": "^5.3.13",
     "@storybook/addon-knobs": "^5.3.13",
     "@storybook/addon-viewport": "^5.3.13",
