--- a/packages/store/tsconfig.json
+++ b/packages/store/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "exclude": ["node_modules", "dist", "build", "lib", "__tests__", "**/*.test*", "**/*.scss.d.ts"],
+  "exclude": ["node_modules", "build"],
   "compilerOptions": {
     "allowJs": true,
     "skipLibCheck": false,
