--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -28,6 +28,7 @@
     "build": "tsc --pretty",
     "test": "run-p test:*",
     "test:ts": "tsc",
+    "test:unit" : "jest --passWithNoTests",
     "lint": "eslint --fix"
   }
 }
