--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   # start serge
   - yarn start-server &
   # run the tests drop out on failure
-  # - yarn test || travis_terminate 1;
+  - yarn test || travis_terminate 1;
   # kill open jobs (especially the Serge server running in the background)
   - kill $(jobs -p) || true
 notifications:
