--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -7,7 +7,7 @@
     "cypress": "^3.8.2"
   },
   "scripts": {
-    "test" : "export NODE_OPTIONS=–max_old_space_size=8192 yarn run cypress run --headless --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7",
+    "test" : "yarn run cypress run --headless --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7",
     "test-local" : "yarn run cypress open"
   }
 }
