Prevent jest from failing if it finds zero tests

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "test": "run-p test:*",
-    "test:unit": "jest --coverage",
+    "test:unit": "jest --coverage --passWithNoTests",
     "test:ts": "tsc --pretty",
     "lint": "eslint --fix"
   }
