introduce missing message declaration

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -18,6 +18,8 @@
     "typescript": "^3.9.3"
   },
   "scripts": {
+    "build": "tsc --pretty",
+    "watch": "tsc --watch",
     "test": "run-p test:*",
     "test:unit": "jest --coverage --passWithNoTests",
     "test:ts": "tsc --pretty",
