adapt story and start changing the style

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start-client": "lerna run start --scope @serge/client --stream",
     "start-server": "lerna run start --scope @serge/server --stream",
     "watch": "lerna run watch --stream",
-    "rebuild" : "yarn build && yarn start",
+    "rebuild": "yarn build && yarn start",
     "dev": "yarn component-dev & yarn start",
     "develop": "lerna run develop --scope @serge/client --stream & yarn start-server",
     "test": "lerna run test --stream",
@@ -41,7 +41,7 @@
     "diff": "lerna diff",
     "heroku-postbuild": "yarn build && yarn build-storybook",
     "serge": "yarn start-server",
-    "snyk-protect": "export NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
+    "snyk-protect": "set NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
     "prepare": "yarn run snyk-protect",
     "version-patch": "lerna version patch",
     "version-minor": "lerna version minor",
