--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "develop": "nodemon --exec yarn start --watch ../packages/components/build --watch ../packages/config/build --watch ../packages/helpers/build"
