experiment with removing env variable that didn't fix problem

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ matrix:
   include:
   - name: Client Pipeline
     env: PACKAGE_LOCATION=packages/client PACKAGE_NAME=@serge/client
-before_script:
-  - export NODE_OPTIONS=–-max_old_space_size=16384
+# before_script:
+#  - export NODE_OPTIONS=–-max_old_space_size=16384
 script:
   # build Serge deployment
   - yarn build
