Avoid issue where tsc complained about .d.ts files being overwritten.

--- a/packages/helpers/tsconfig.json
+++ b/packages/helpers/tsconfig.json
@@ -24,8 +24,7 @@
       "@serge/*": ["../"]
     },
     "composite": false,
-    "declaration": true,
-    "declarationMap": true,
+    "declaration": false,
     "sourceMap": true,
     "outDir": "./build"
   },
