--- a/packages/store/tsconfig.json
+++ b/packages/store/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "allowJs": true,
     "skipLibCheck": false,
-    "target": "esnext",
+    "target": "ES2019",
     "module": "commonjs",
-    "lib": ["es5", "es6", "es7", "es2017", "dom"],
+    "lib": ["es5", "es6", "es7", "es2017", "ES2019", "dom"],
     "jsx": "react",
     "downlevelIteration": true,
     "strict": true,
