--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "ES2019",
     "lib": [
       "dom",
       "dom.iterable",
@@ -8,7 +8,8 @@
       "es5",
       "es6",
       "es7",
-      "es2017"
+      "es2017",
+      "ES2019"
     ],
     "allowJs": true,
     "skipLibCheck": true,
