--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -2,9 +2,9 @@
   "exclude": ["node_modules", "dist", "build", "lib", "__tests__", "**/*.test*", "**/*.scss.d.ts"],
   "compilerOptions": {
     "skipLibCheck": false,
-    "target": "esnext",
+    "target": "ES2019",
     "module": "commonjs",
-    "lib": ["es5", "es6", "es7", "es2017", "dom"],
+    "lib": ["es5", "es6", "es7", "es2017", "ES2019", "dom"],
     "jsx": "react",
     "downlevelIteration": true,
     "strict": true,
