--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,7 +16,8 @@
     "lint": "run-p lint:*",
     "lint:ts": "eslint --fix src/**/*.ts*",
     "lint:styles": "stylelint --fix src/**/*.scss",
-    "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/build/storybook"
+    "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/build/storybook",
+    "add-component": "npx buildcom -sjt -c 'scss' -m --output './src/local'"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
