--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,7 +17,7 @@
     "lint:ts": "eslint --fix src/**/*.ts*",
     "lint:styles": "stylelint --fix src/**/*.scss",
     "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/build/storybook",
-    "add-component": "npx buildcom -sjt -c 'scss' -m --output './src/local'"
+    "add-component": "npx buildcom -sjt -c 'scss' -m"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
