--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -43,6 +43,7 @@
     "@types/node-sass": "^4.11.0",
     "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-leaflet": "^2.5.1",
+    "@types/react-maskedinput": "^4.0.4",
     "@types/react-test-renderer": "^16.9.2",
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
