--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -73,6 +73,7 @@
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-leaflet-vectorgrid": "^2.2.1",
+    "react-scrollbar": "^0.5.6",
     "react-sortablejs": "^2.0.11",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.2",
