--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.12",
+    "@types/react-select": "^3.1.2",
+    "@types/reactour": "^1.17.1",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
     "classnames": "^2.2.6",
