--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,10 +31,6 @@
     "@serge/mocks": "0.3.0",
     "@serge/store": "0.3.0",
     "@serge/themes": "0.3.0",
-    "@storybook/addon-backgrounds": "^5.3.13",
-    "@storybook/addon-knobs": "^5.3.13",
-    "@storybook/addon-viewport": "^5.3.13",
-    "@storybook/react": "^5.3.13",
     "@types/babel-core": "^6.25.6",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
@@ -74,8 +70,8 @@
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-leaflet-vectorgrid": "^2.2.1",
-    "react-scrollbar": "^0.5.6",
     "react-maskedinput": "^4.0.1",
+    "react-scrollbar": "^0.5.6",
     "react-sortablejs": "^2.0.11",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.2",
@@ -83,7 +79,7 @@
     "sass-loader": "^8.0.2",
     "standard": "^14.3.1",
     "storybook-addon-react-docgen": "^1.2.28",
-    "storybook-readme": "^5.0.8",
+    "storybook-readme": "^5.0.9",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.0",
     "stylelint-config-css-modules": "^2.2.0",
@@ -97,6 +93,14 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.8.3"
+    "@babel/preset-typescript": "^7.8.3",
+    "@storybook/addon-knobs": "^6.1.14",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/node-logger": "^6.1.14",
+    "@storybook/react": "^6.1.14",
+    "@storybook/codemod": "^6.1.14",
+    "jscodeshift": "^0.11.0"
   }
 }
