--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,8 @@
     "@json-editor/json-editor": "^1.3.5",
     "@serge/components": "0.3.0",
     "@serge/config": "0.3.0",
+    "@serge/actions": "^0.3.0",
+    "@serge/api": "^0.3.0",
     "@serge/helpers": "0.3.0",
     "@serge/themes": "0.3.0",
     "@types/jest": "^25.2.3",
