--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@serge/api",
+  "description": "All API functions that are called from from @serge/client and @serge/store",
   "version": "0.3.0",
   "license": "Apache-2.0",
   "author": "",
