--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@serge/server",
   "version": "0.3.0",
+  "description": "NodeJS backend for Serge application",
   "license": "Apache-2.0",
   "main": "main.js",
   "bin": "bin.js",
