--- a/packages/custom-types/package.json
+++ b/packages/custom-types/package.json
@@ -2,6 +2,7 @@
   "name": "@serge/custom-types",
   "version": "0.3.0",
   "license": "Apache-2.0",
+  "description": "TypeScript definitions for interfaces that are used across several modules",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "dependencies": {}
 }
