--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -89,7 +89,8 @@
     "stylelint-prettier": "^1.1.2",
     "ts-jest": "^26.2.0",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.8.3",
