--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -23,7 +23,7 @@
     "watch" : "tsc --watch",
     "test": "run-p test:*",
     "test:unit": "jest --coverage --passWithNoTests",
-    "test:watch": "jest --watch --coverage --passWithNoTests",
+    "test:watch": "jest --watch --passWithNoTests",
     "test:ts": "tsc --pretty",
     "lint": "eslint --fix",
     "genreg": "bcreg --ext ts"
