--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -30,6 +30,7 @@
     "@serge/helpers": "0.3.0",
     "@serge/mocks": "0.3.0",
     "@serge/themes": "0.3.0",
+    "@turf/turf": "^6.3.0",
     "@types/babel-core": "^6.25.6",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
