--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "npm-run-all": "^4.1.5",
     "snyk": "^1.298.1"
   },
+  "resolutions": {
+    "@types/react": "^16.14.5"
+  },
   "scripts": {
     "start": "yarn run-p start-*",
     "start-client": "lerna run start --scope @serge/client --stream",
