--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
+    "@babel/helper-regex": "^7.10.5",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
@@ -49,7 +50,7 @@
     "pouchdb-all-dbs": "^1.0.2",
     "preval.macro": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
+    "react": "^16.12.0",
     "react-ace-editor": "0.0.3",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.8",
@@ -75,6 +76,9 @@
     "uniqid": "^5.0.3",
     "universal-router": "^8.1.0",
     "whatwg-fetch": "^3.6.1"
+  },
+  "resolutions": {
+    "@types/react": "^16.14.5"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
