--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -71,6 +71,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^4.0.0",
     "uniqid": "^5.0.3",
     "universal-router": "^8.1.0",
