--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -67,6 +67,7 @@
     "jest": "^26.4.2",
     "leaflet": "^1.6.0",
     "markdown-loader": "^5.1.0",
+    "moment-timezone": "^0.5.33",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-addons-css-transition-group": "^15.6.2",
