--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     }
   },
   "dependencies": {
-    "husky": "^4.2.5",
-    "lerna": "^3.16.4",
+    "@types/react": "^17.0.3",
+    "husky": "^6.0.0",
+    "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "snyk": "^1.298.1"
-  },
-  "resolutions": {
-    "@types/react": "^16.14.5"
   },
   "scripts": {
     "start": "yarn run-p start-*",
