--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -24,8 +24,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "composite": false
+    "jsx": "react-jsx",
+    "composite": false,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
