--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -30,6 +30,7 @@
     "@serge/helpers": "0.3.0",
     "@serge/mocks": "0.3.0",
     "@serge/themes": "0.3.0",
+    "@storybook/addon-actions": "^6.2.8",
     "@turf/turf": "^6.3.0",
     "@types/babel-core": "^6.25.6",
     "@types/classnames": "^2.2.10",
@@ -37,66 +38,65 @@
     "@types/jest": "^26.0.10",
     "@types/lodash": "^4.14.149",
     "@types/node-sass": "^4.11.0",
-    "@types/react": "^16.9.35",
+    "@types/react": "^17.0.3",
     "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-color": "^3.0.4",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^17.0.3",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-maskedinput": "^4.0.4",
-    "@types/react-test-renderer": "^16.9.2",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/sortablejs": "^1.10.6",
     "@types/vfile-message": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "copyfiles": "^2.2.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^5.2.3",
     "css-modules-typescript-loader": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-standard": "^4.0.1",
-    "file-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
     "honeycomb-grid": "^3.1.3",
     "jest": "^26.4.2",
     "leaflet": "^1.6.0",
-    "markdown-loader": "^5.1.0",
+    "markdown-loader": "^6.0.0",
     "moment-timezone": "^0.5.33",
     "npm-run-all": "^4.1.5",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-docgen-typescript-loader": "^3.6.0",
-    "react-dom": "^16.12.0",
-    "react-leaflet": "^2.6.1",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "react-leaflet-vectorgrid": "^2.2.1",
     "react-maskedinput": "^4.0.1",
     "react-scrollbar": "^0.5.6",
     "react-sortablejs": "^6.0.0",
-    "react-test-renderer": "^16.12.0",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "sass": "^1.25.0",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^11.0.1",
     "sortablejs": "^1.13.0",
-    "standard": "^14.3.1",
+    "standard": "^16.0.3",
     "storybook-addon-react-docgen": "^1.2.28",
     "storybook-readme": "^5.0.9",
-    "style-loader": "^1.1.3",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.2.0",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-prettier": "^8.0.1",
-    "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-css-modules": "^0.9.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-css-modules": "^1.2.0-globals",
     "stylelint-prettier": "^1.1.2",
     "ts-jest": "^26.2.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
+    "ts-loader": "^9.0.0",
+    "typescript": "^4.2.4",
     "uniqid": "^5.0.3"
   },
   "resolutions": {
