--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,36 +6,35 @@
   "bin": "bin.js",
   "dependencies": {
     "@serge/client": "^0.3.0",
-    "adm-zip": "^0.4.13",
+    "adm-zip": "^0.5.5",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-pouchdb": "^4.1.0",
     "ip": "^1.1.5",
-    "nodemon": "^1.18.11",
-    "opn": "^6.0.0",
+    "nodemon": "^2.0.7",
+    "open": "^8.0.6",
     "path": "^0.12.7",
     "pouchdb-adapter-http": "^7.0.0",
     "pouchdb-adapter-node-websql": "^7.0.0",
     "pouchdb-core": "^7.0.0",
     "pouchdb-mapreduce": "^7.0.0",
     "pouchdb-replication": "^7.0.0",
-    "sqlite3": "^4.1.0",
+    "sqlite3": "^5.0.2",
     "uniqid": "^5.0.3",
     "walk": "^2.3.14"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-config-standard": "^14.1.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.18.2"
+    "eslint-plugin-promise": "^5.1.0",
+    "prettier": "^2.2.1"
   },
   "optionalDependencies": {
-    "node-windows": "^0.1.14"
+    "node-windows": "^1.0.0-beta.5"
   },
   "scripts": {
     "dev": "nodemon main.js",
