--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     }
   },
   "dependencies": {
-    "@types/react": "^17.0.3",
     "husky": "^6.0.0",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "snyk": "^1.298.1"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.3"
   },
   "scripts": {
     "start": "yarn run-p start-*",
