--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -79,6 +79,8 @@
     "whatwg-fetch": "^3.6.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-config-standard": "^16.0.2",
