--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,5 +3,5 @@
   "version": "0.0.1",
   "license": "Apache-2.0",
   "author": "IanMayo <ian@planetmayo.com>",
-  "description": "Data is useful for use in app directly without and compilations so user can change data anytime whenever needed"
+  "description": "Data resources for use in other components. These elements are replaceable at runtime"
 }
