--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -1,11 +1,37 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends" : [
-    "plugin:@typescript-eslint/recommended",
+  "parserOptions": {
+    "project": "./tsconfig.json", // Required to have rules that rely on Types.
+    "include": [
+      "./src"
+    ],
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "extends": [
+    "plugin:@typescript-eslint/recommended", // Out of the box Typescript rules
     "standard"
   ],
-  "plugins": ["prettier"],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "no-use-before-define": 0,
+    "@typescript-eslint/no-use-before-define": ["error"],
+    // temporary rules until the code is fixed. Please add permanent rules above.
+    "no-case-declarations": 0,
+    "camelcase": 0,
+    "no-prototype-builtins": 0,
+    "prefer-promise-reject-errors": 0,
+    "@typescript-eslint/ban-types": 0,
+    "@typescript-eslint/ban-ts-comment": 0,
+    "@typescript-eslint/no-this-alias": 0,
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/no-explicit-any": 0
+  },
+  "env": {
+    "browser": true
   }
 }
