fixed load dbs when start the app

--- a/packages/executable/package.json
+++ b/packages/executable/package.json
@@ -13,7 +13,7 @@
   "pkg": {
     "assets": [
       "../client/build/**/*",
-      "../server/default_img/**/*"
+      "../server/**/*"
     ],
     "scripts": [
       "../server/addons/**/*"
