--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^5.1.0",
+    "geojson": "^0.5.0",
     "honeycomb-grid": "^3.1.3",
     "jest": "^26.4.2",
     "leaflet": "^1.6.0",
