--- a/package.json
+++ b/package.json
@@ -20,6 +20,32 @@
     "npm-run-all": "^4.1.5",
     "snyk": "^1.298.1"
   },
+  "devDependencies": {
+    "typescript": "^4.2.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.23.2",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.13.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-prettier": "^1.2.0",
+    "jest": "^26.6.3",
+    "webpack": "^5.36.0",
+    "@babel/core": "^7.13.16",
+    "@types/babel-core": "^6.25.6",
+    "babel-loader": "^8.2.2",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/helper-regex": "^7.10.5",
+    "@babel/preset-typescript": "^7.13.0"
+  },
   "resolutions": {
     "@types/react": "^17.0.3"
   },
