--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "@babel/helper-regex": "^7.10.5",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
@@ -33,7 +32,7 @@
     "flatpickr": "^4.5.7",
     "flexlayout-react": "^0.5.5",
     "honeycomb-grid": "^3.1.3",
-    "jest-mock-console": "^1.0.0",
+    "jquery": "^3.6.0",
     "json-metaschema": "^1.2.0",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
@@ -41,6 +40,7 @@
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.4",
+    "popper.js": "^1.16.1",
     "pouchdb": "^7.2.2",
     "pouchdb-adapter-node-websql": "^7.0.0",
     "pouchdb-all-dbs": "^1.0.2",
@@ -48,7 +48,6 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-ace-editor": "0.0.3",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-collapsible": "^2.6.0",
     "react-color": "^2.17.3",
@@ -57,6 +56,7 @@
     "react-flatpickr": "^3.9.0",
     "react-font-awesome": "^1.0.3",
     "react-fontawesome": "^1.6.1",
+    "react-is": "^17.0.2",
     "react-jsonschema-form": "^1.8.1",
     "react-maskedinput": "^4.0.1",
     "react-redux": "^7.1.3",
@@ -69,22 +69,10 @@
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
-    "styled-components": "^5.2.3",
+    "styled-components": "^4.0.0",
     "uniqid": "^5.0.3",
     "universal-router": "^9.0.1",
     "whatwg-fetch": "^3.6.1"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.16.0",
-    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
