--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,8 +7,7 @@
   "dependencies": {
     "@types/expired-storage": "^1.0.0",
     "dotenv": "^8.2.0",
-    "expired-storage": "^1.0.2",
-    "typescript": "^4.2.4"
+    "expired-storage": "^1.0.2"
   },
   "scripts": {
     "build": "tsc --pretty",
