--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -6,17 +6,11 @@
   "main": "build/index.js",
   "dependencies": {
     "@serge/config": "0.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
     "buildcom": "^0.4.5",
-    "eslint": "^7.1.0",
-    "eslint-config-standard": "^16.0.2",
     "honeycomb-grid": "^3.1.7",
-    "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
     "standard": "^16.0.3",
-    "ts-jest": "^26.0.0",
-    "typescript": "^4.2.4"
+    "ts-jest": "^26.0.0"
   },
   "scripts": {
     "build": "tsc --pretty",
