--- a/.github/workflows/serge.yml
+++ b/.github/workflows/serge.yml
@@ -21,15 +21,19 @@ jobs:
   
     name: Running unit test cases
     runs-on: macOS-latest
+    
+    strategy:
+      matrix:
+        node-version: [10.x]
 
     steps:
       - name: Setup repo
         uses: actions/checkout@v1
 
-      - name: Use Node.js version ${{ matix.node-version }}
+      - name: Use Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matix.node-version }}
+          node-version: ${{ matrix.node-version }}
           
       - name : Running dependency installation
         run: yarn install
