fix the executable build

--- a/packages/executable/package.json
+++ b/packages/executable/package.json
@@ -13,7 +13,8 @@
   "pkg": {
     "assets": [
       "../client/build/**/*",
-      "../server/**/*"
+      "../server/**/*",
+      "../data/*"
     ],
     "scripts": [
       "../server/addons/**/*"
