--- a/packages/executable/package.json
+++ b/packages/executable/package.json
@@ -7,7 +7,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "find": "^0.3.0",
-    "pkg": "^4.4.0"
+    "pkg": "^4.4.0",
+    "archiver": "^5.3.0"
   },
   "bin": "../server/bin.js",
   "pkg": {
