--- a/packages/executable/package.json
+++ b/packages/executable/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "find": "^0.3.0",
     "pkg": "^4.4.0",
-    "archiver": "^5.3.0"
+    "archiver": "^5.3.0",
+    "eslint-plugin-prettier": "^3.4.0"
   },
   "bin": "../server/bin.js",
   "pkg": {
