--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "packages/*"
   ],
   "dependencies": {
+    "eslint": "^7.26.0",
     "lerna": "^3.16.4",
+    "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
     "snyk": "^1.298.1"
   },
@@ -29,6 +31,7 @@
     "test-local": "lerna run test-local --stream",
     "test-unit": "lerna run test:unit --stream",
     "lint": "lerna run lint --stream",
+    "lint-staged": "eslint --cache --fix",
     "storybook": "lerna run storybook --scope @serge/components --stream",
     "build-storybook": "lerna run build-storybook --scope @serge/components --stream",
     "build": "lerna run build --scope @serge/components --scope @serge/config --scope @serge/helpers --scope @serge/store --scope @serge/client --stream",
