--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-maskedinput": "^4.0.4",
+    "@types/react-modal": "^3.12.0",
     "@types/react-test-renderer": "^16.9.2",
     "@types/sortablejs": "^1.10.6",
     "@types/vfile-message": "^2.0.0",
@@ -77,6 +78,7 @@
     "react-leaflet": "^2.6.1",
     "react-leaflet-vectorgrid": "^2.2.1",
     "react-maskedinput": "^4.0.1",
+    "react-modal": "^3.13.1",
     "react-scrollbar": "^0.5.6",
     "react-sortablejs": "^6.0.0",
     "react-test-renderer": "^16.12.0",
