--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -80,6 +80,7 @@
     "style-loader": "^2.0.0",
     "stylelint": "^13.2.0",
     "stylelint-config-standard": "^21.0.0",
+    "stylelint-config-css-modules": "^2.2.0",
     "stylelint-css-modules": "^1.2.0-globals",
     "stylelint-prettier": "^1.1.2",
     "ts-jest": "^26.2.0",
