--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -14,7 +14,7 @@
     "cleanup": "rimraf build/vendor && rimraf build/local/**/mocks && rimraf build/local/**/*.stories.* && rimraf build/local/**/*.spec.*",
     "test": "run-p test:*",
     "test:ts": "tsc --pretty",
-    "test:unit": "jest --coverage -o",
+    "test:unit": "jest --passWithNoTests",
     "lint": "run-p lint:*",
     "lint:ts": "eslint --fix src/**/*.ts*",
     "lint:styles": "stylelint --fix src/**/*.scss",
