--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -40,3 +40,13 @@ jobs:
         
       - name : Running unit testing
         run: yarn test-unit
+
+      - name : Build executable files
+        run: yarn pkg-build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: Attach Executable Files
+          path: /packages/executable/builds/
+          if-no-files-found: error
