fix issue #780 + clean code

--- a/packages/executable/package.json
+++ b/packages/executable/package.json
@@ -8,9 +8,7 @@
   "dependencies": {
     "find": "^0.3.0",
     "pkg": "^4.4.0",
-    "archiver": "^5.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "@babel/eslint-parser": "^7.13.14"
+    "archiver": "^5.3.0"
   },
   "bin": "../server/bin.js",
   "pkg": {
@@ -36,9 +34,10 @@
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "@babel/eslint-parser": "^7.13.14"
   }
 }
