upload multiple files artifact

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -48,5 +48,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Attach Executable Files
-          path: /home/runner/work/serge/serge/packages/executable/builds/
+          path: |
+            /home/runner/work/serge/serge/packages/executable/builds/*_linux.zip
+            /home/runner/work/serge/serge/packages/executable/builds/*_macos.zip
+            /home/runner/work/serge/serge/packages/executable/builds/*_win64.zip
           if-no-files-found: error
