--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -50,13 +50,13 @@
     "pouchdb-all-dbs": "^1.0.2",
     "preval.macro": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "17.0.2",
     "react-ace-editor": "0.0.3",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-collapsible": "^2.6.0",
     "react-color": "^2.17.3",
-    "react-dom": "^16.8.3",
+    "react-dom": "17.0.2",
     "react-dropzone": "^10.1.5",
     "react-flatpickr": "^3.9.0",
     "react-font-awesome": "^1.0.3",
@@ -79,7 +79,7 @@
     "whatwg-fetch": "^3.6.1"
   },
   "resolutions": {
-    "@types/react": "^16.14.5"
+    "@types/react": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
