--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -51,13 +51,13 @@
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
@@ -103,7 +103,7 @@
     "node-sass-chokidar": "^1.5.0"
   },
   "resolutions": {
-    "@types/react": "^16.14.5"
+    "@types/react": "^17.0.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.8.3",
