--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,7 @@
     "@serge/config": "0.3.0",
     "@serge/helpers": "0.3.0",
     "@serge/themes": "0.3.0",
+    "@types/flat": "^5.0.1",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.4",
     "@types/node-fetch": "^2.5.8",
