--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -51,6 +51,7 @@
     "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
+    "bootstrap": "^4.3.1",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "copyfiles": "^2.2.0",
@@ -75,6 +76,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
